# scope-wallspace-effects

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  experiment_idea.yml  feature_request.yml  task_improvement.yml
src/scope_wallspace_effects/: __init__.py  pipeline.py  schema.py
src/scope_wallspace_effects/effects/: __init__.py  blur.py  chromakey.py  color.py  controlnet.py  edge_detect.py  glow.py  invert.py  scanlines.py  threshold.py
