[project]
name = "scope-wallspace-effects"
version = "0.1.0"
description = "GPU-accelerated effects pipeline for WallSpace.Studio — chromakey, edge detect, threshold, blur, glow, scanlines, RGB gains, color adjustments, and ControlNet preprocessors (canny, lineart, softedge, scribble, depth, color). Deployable as preprocessor or postprocessor."
requires-python = ">=3.12"

[project.entry-points."scope"]
scope_wallspace_effects = "scope_wallspace_effects"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_wallspace_effects"]
